@@ -12,6 +12,7 @@ This release includes the following changes:
  o Added CURLOPT_NOPROXY and the corresponding --noproxy
  o the OpenSSL-specific code disables TICKET (rfc5077) which is enabled by
    default in openssl 0.9.8j
+ o Added CURLOPT_TFTP_BLKSIZE
 
 This release includes the following bugfixes:
 
@@ -27,6 +28,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Lisa Xu, Daniel Fandrich, Craig A West, Alexey Borzov, Sharad Gupta,
- Peter Sylvester
+ Peter Sylvester, Chad Monroe
 
         Thanks! (and sorry if I forgot to mention someone)
